Moving over changes from the UI templates repo.

--- a/app/assets/sass/_bulleted_lists.sass
+++ b/app/assets/sass/_bulleted_lists.sass
@@ -1,10 +1,8 @@
 // `Bulleted Lists => For "content" type lists.
 //----------------------------------------------------------------------------------------------------
 
-ul ul,
-ul ol,
-ol ul,
-ol ol
+li ol,
+li ul
   margin-bottom: 0
 
 #main article ul,
