--- a/app/assets/sass/_formalize.sass
+++ b/app/assets/sass/_formalize.sass
@@ -110,7 +110,7 @@ input[type="button"]
   +border-radius(4px)
   +background-clip(padding-box)
   background: #ddd url(../images/button.png) repeat-x
-  +background-image(linear-gradient(color-stops(#fff, #ddd)))
+  +background-image(linear-gradient(#fff, #ddd))
   border: 1px solid
   border-color: #ddd #bbb #999
   cursor: pointer
@@ -163,6 +163,7 @@ input[type="week"]
   color: #000
   outline: 0
   padding: 2px 3px
+  text-align: left
   font-size: 13px
   // Leaving out Helvetica Neue, to not throw off size="..."
   // on inputs. Arial is more reliable, on Windows and OS X.
