--- a/app/assets/sass/_helper_classes.sass
+++ b/app/assets/sass/_helper_classes.sass
@@ -3,6 +3,12 @@
 // 
 // Mmm... sprinkles!
 
+// `Hide/Show
+//----------------------------------------------------------------------------------------------------
+
+.hide
+  display: none !important
+
 // `Clearing Element
 //----------------------------------------------------------------------------------------------------
 
