--- a/app/assets/sass/_nav_primary.sass
+++ b/app/assets/sass/_nav_primary.sass
@@ -1,12 +1,12 @@
 #nav_primary
+  -webkit-font-smoothing: subpixel-antialiased
   background: url(../images/nav_primary.png) no-repeat
   padding-top: 12px
-  float: left
   white-space: nowrap
-  margin-left: -100%
-  position: relative
-  right: 70px
   width: 60px
+  position: fixed
+  top: 82px
+  margin-left: -70px
 
 #nav_primary nav
   background: url(../images/nav_primary.png) no-repeat right bottom
