--- a/app/assets/sass/_pagination.sass
+++ b/app/assets/sass/_pagination.sass
@@ -20,6 +20,7 @@
 
 #main .pagination li:hover
   +background-image(linear-gradient(#fff, #ddd))
+  background-color: #ddd
 
 #main .pagination li:hover,
 #main .pagination li.highlighted
