--- a/app/assets/sass/_sidebar.sass
+++ b/app/assets/sass/_sidebar.sass
@@ -8,7 +8,7 @@
   width: 300px
   margin-right: -100%
   position: relative
-  left: 10px
+  margin-left: 10px
 
 //
 // Overrides => Call to action.
