--- a/app/assets/sass/_text.sass
+++ b/app/assets/sass/_text.sass
@@ -2,8 +2,8 @@
 //----------------------------------------------------------------------------------------------------
 
 body
-  font: 14px/1.8 'Helvetica Neue', Arial, 'Liberation Sans', FreeSans, sans-serif
   -webkit-font-smoothing: antialiased
+  font: 14px/1.8 $body_font
 
 pre,
 code
@@ -28,10 +28,10 @@ h6
 
 h1,
 h2
+  -webkit-font-smoothing: subpixel-antialiased
   font:
     weight: normal
     weight: 100
-  -webkit-font-smoothing: subpixel-antialiased
 
 h1
   font:
