--- a/app/assets/sass/_form_elements.sass
+++ b/app/assets/sass/_form_elements.sass
@@ -157,6 +157,7 @@ input[type="button"]:active,
 input[type="submit"]:active,
 input[type="reset"]:active
   +background-image(linear-gradient(#fff, #e0e0e0 1px, #bebebe))
+  background-color: #bebebe
   border-color: #838383
 
 button:focus,
@@ -201,43 +202,21 @@ input[type="tel"],
 input[type="text"],
 input[type="time"],
 input[type="url"],
-input[type="week"],
-.action_button_blue,
-.action_button_green,
-.action_button:focus,
-.action_button:active,
-.action_button_blue:focus,
-.action_button_blue:active,
-.action_button_green:focus,
-.action_button_green:active
-  +box-shadow(#fff 0 1px 0 0, #eae9ec 0 0 0 5px)
-
-textarea,
-select,
-input[type="date"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="email"],
-input[type="month"],
-input[type="number"],
-input[type="password"],
-input[type="search"],
-input[type="tel"],
-input[type="text"],
-input[type="time"],
-input[type="url"],
 input[type="week"]
   +round
-  +background-image(linear-gradient(#ddd, #fff 3px, #eee))
+  +box-shadow(inset rgba(#000, 0.1) 0 1px 1px 0, #fff 0 1px 0 0, #eeedeb 0 0 0 5px)
+  +background-image(linear-gradient(#fff, #eee))
   padding: 7px 10px
   height: 35px
 
 textarea
+  display: block
   height: auto
 
 @media (-webkit-min-device-pixel-ratio: 0)
   select
     background-image: url(../images/select_arrows.png), url(../images/select_gradient.png)
+    background-size: auto
     background-position: right 7px, 0 0
     background-repeat: no-repeat, repeat-x
     padding-right: 41px
@@ -273,7 +252,7 @@ input[type="time"]:active,
 input[type="url"]:active,
 input[type="week"]:active
   border-color: $blue
-  +box-shadow(#fff 0 1px 0 0, $blue_light 0 0 5px 0, #eae9ec 0 0 0 5px)
+  +box-shadow(inset rgba(#000, 0.1) 0 1px 1px 0, #fff 0 1px 0 0, $blue_light 0 0 5px 0, #eeedeb 0 0 0 5px)
 
 // `Action Buttons
 //----------------------------------------------------------------------------------------------------
@@ -281,12 +260,13 @@ input[type="week"]:active
 .action_button_blue,
 .action_button_green
   +border-radius(16px)
-  +background-image(linear-gradient(#ccc, #aaa 1px, #888))
+  +box-shadow(inset rgba(#fff, 0.3) 0 1px 0 0, #fff 0 1px 0 0, #eeedeb 0 0 0 5px)
   border: 1px solid #666
   display: inline-block
   font:
     size: 15px
     weight: bold
+  line-height: 1.3
   text-align: center
   text-shadow: rgba(#000, 0.5) 0 1px 0
   padding: 7px 20px
@@ -299,14 +279,17 @@ input[type="week"]:active
   text-decoration: none
 
 .action_button_green
-  +background-image(linear-gradient(#a2c07e, #81a950 1px, #679037))
+  +background-image(linear-gradient(#81a950, #679037))
+  background-color: #81a950
 
-.action_button_green:hover
-  +background-image(linear-gradient(#87a366, #5d832f 1px, #436916))
+.action_button_green:hover,
+.action_button_green:focus,
+.action_button_green:active
+  +background-image(linear-gradient(#5d832f, #436916))
+  background-color: #5d832f
 
 .action_button_green:focus,
 .action_button_green:active
-  +background-image(linear-gradient(#87a366, #5d832f 1px, #436916))
   color: #9cae87
 
 .action_button_green,
@@ -316,14 +299,17 @@ input[type="week"]:active
   border-color: #607346
 
 .action_button_blue
-  +background-image(linear-gradient(#55addb, #1a90cd 1px, #0077b4))
+  +background-image(linear-gradient(#1a90cd, #0077b4))
+  background-color: #0077b4
 
-.action_button_blue:hover
-  +background-image(linear-gradient(#559cc1, #1a7aab 1px, #006091))
+.action_button_blue:hover,
+.action_button_blue:focus,
+.action_button_blue:active
+  +background-image(linear-gradient(#1a7aab, #006091))
+  background-color: #006091
 
 .action_button_blue:focus,
 .action_button_blue:active
-  +background-image(linear-gradient(#559cc1, #1a7aab 1px, #006091))
   color: #87abbe
 
 .action_button_blue,
@@ -336,7 +322,7 @@ input[type="week"]:active
 .action_button_green:active,
 .action_button_blue:focus,
 .action_button_blue:active
-  +box-shadow(#fff 0 1px 0 0, #eae9ec 0 0 0 5px, inset rgba(#000, 0.5) 0 5px 10px 0)
+  +box-shadow(#fff 0 1px 0 0, #eeedeb 0 0 0 5px, inset rgba(#000, 0.5) 0 5px 10px 0)
 
 //
 // Icons inside buttons:
@@ -366,7 +352,7 @@ a.action_button_mini,
 button.action_button_mini
   @extend button
   +border-radius(17px)
-  +box-shadow(#fff 0 1px 0 0, #eae9ec 0 0 0 5px)
+  +box-shadow(#fff 0 1px 0 0, #eeedeb 0 0 0 5px)
   color: $body_text
   display: inline-block
   font:
@@ -382,4 +368,11 @@ button.action_button_mini
   &:active,
   &:focus
     border-color: $blue
-    +box-shadow(inset rgba(#000, 0.25) 0 1px 2px 0, #fff 0 1px 0 0, $blue_light 0 0 5px 0, #eae9ec 0 0 0 5px)
+    +box-shadow(inset rgba(#000, 0.25) 0 1px 2px 0, #fff 0 1px 0 0, $blue_light 0 0 5px 0, #eeedeb 0 0 0 5px)
+
+// `Image Input.
+//----------------------------------------------------------------------------------------------------
+
+input[type="image"]:active
+  position: relative
+  top: 1px
