--- a/app/assets/sass/_main_reader.sass
+++ b/app/assets/sass/_main_reader.sass
@@ -2,7 +2,6 @@
 //----------------------------------------------------------------------------------------------------
 
 #main
-  @extend .clearfix
   float: left
   margin: 0 0 10px
   width: 100%
@@ -22,6 +21,7 @@
   padding: 40px 70px 45px
 
 #main header + article,
+#reader_header + article,
 #main .header_tabs + article,
 #main .top_section + article
   +round_top_none
@@ -40,8 +40,9 @@
 .header_tabs,
 .top_section
   @extend .clearfix
-  background: #ddd
-  +background-image(linear-gradient(#fff, #eee 1px, #ddd))
+  +box-shadow(inset #fff 0 1px 0 0)
+  +background-image(linear-gradient(#eeedeb, #dddcda))
+  background-color: #dddcda
   border: 1px solid #cbc9cf
   text-shadow: #fff 0 1px 0
 
@@ -96,6 +97,34 @@
   left: 28px
   bottom: -6px
 
+// `Reader Header
+//----------------------------------------------------------------------------------------------------
+
+#reader_header
+  background: #f2f1ef url(../images/body.png)
+  border-bottom: 1px solid #cbc9cf
+  padding-top: 10px
+  width: 600px
+  position: fixed
+  top: 72px
+  z-index: 2
+
+#reader_header:after
+  background: url(../images/shadow.png) repeat-x
+  content: ''
+  font-size: 0
+  line-height: 0
+  position: absolute
+  top: 100%
+  left: 0
+  right: 0
+  height: 5px
+  pointer-events: none
+
+#reader_header + article
+  background-image: none
+  margin-top: 34px
+
 // `Article Top Section
 //----------------------------------------------------------------------------------------------------
 
@@ -103,6 +132,7 @@
   @extend .clearfix
   +round_top
   +background-image(linear-gradient(#fff, #ececec 1px, #e9e9e9))
+  background-color: #e9e9e9
   border: 1px solid #cbc9cf
     bottom: 0
   font-size: 12px
@@ -112,6 +142,8 @@
 .top_section + .header_tabs
   +round_top_none
   +background-image(linear-gradient(#e9e9e9, #d7d6da))
+  +box-shadow(none)
+  background-color: #e9e9e9
   border-top: 0
 
 .top_section + .header_tabs .highlighted span
@@ -180,27 +212,36 @@
 // `Main > Verses
 //----------------------------------------------------------------------------------------------------
 
-.verse:focus
-  background: #ff9
-  outline: 0
+#verses_selected_form
+  display: block
+  overflow: hidden
+  width: 0
+  height: 0
 
-.verse strong
-  font:
-    size: 9px
-    weight: bold
-  top: -1px
+.verse.selected
+  background: #ff9
+
+.verse + .verse
+  margin-left: 3px
+
+.verseno
   +round
-  background: #eee
+  +background-image(linear-gradient(#eee, #ddd))
+  background-color: #eee
   border-top: 1px solid #ccc
   color: #666
-  line-height: 1
-  padding: 2px 4px 3px
-  text-decoration: none
-
-.verse strong:hover
-  color: $blue
-  text-decoration: underline
   cursor: pointer
+  display: inline-block
+  font:
+    family: $body_font
+    size: 10px
+    weight: bold
+  line-height: 1
+  margin:
+    top: 4px
+    right: 2px
+  padding: 2px 4px 3px
+  vertical-align: top
 
 // `Nav Arrows
 //----------------------------------------------------------------------------------------------------
@@ -217,12 +258,12 @@
   text-indent: -99999px
   width: 40px
   height: 40px
-  position: absolute
+  position: fixed
   top: 50%
 
 .nav_prev
   background-position: 0 -40px
-  left: 15px
+  margin-left: -55px
 
 .nav_prev:hover
   background-position: -40px -40px
@@ -231,7 +272,7 @@
   background-position: -80px -40px
 
 .nav_next
-  right: 15px
+  margin-left: 473px
 
 .nav_next:hover
   background-position: -40px 0
