--- a/app/assets/sass/_progress_bars.sass
+++ b/app/assets/sass/_progress_bars.sass
@@ -33,8 +33,8 @@
   right: 0
 
 .progress_bar_outer
-  background: #fff
   +background-image(linear-gradient(#fff, #ddd 95%, #ccc))
+  background-color: #ccc
   margin-right: 180px
   overflow: hidden
   position: relative
