--- a/app/assets/sass/application.sass
+++ b/app/assets/sass/application.sass
@@ -1,8 +1,9 @@
-@charset "UTF-8"
 @import compass/css3
 @import vars
 @import clearfix
+@import helper_classes
 @import reset
+@import global_html
 @import text
 @import formalize
 @import form_elements
@@ -14,7 +15,6 @@
 @import tabs
 @import tables
 @import dynamic_menus
-@import helper_classes
 @import wrapper_container
 @import header
 @import nav_primary
@@ -23,50 +23,5 @@
 @import split_pane
 @import sidebar
 @import footer
-
-// `General HTML
-//----------------------------------------------------------------------------------------------------
-
-// article
-//   background: red !important
-
-*
-  +background-clip(padding-box)
-
-body
-  background: #f0f2f4 url(../images/body.png)
-  color: $body_text
-
-a
-  color: $blue
-
-a:hover
-  color: $blue_light
-
-header,
-footer,
-ul
-  @extend .clearfix
-
-small,
-.small
-  font-size: 11px
-
-.mute,
-.mute a
-  color: $mute
-
-.mute a:hover
-  color: $body_text
-
-.callout
-  background:
-    image: url(../images/callout.png)
-    repeat: repeat-y
-  color: #749c43
-  font-size: 24px !important
-  line-height: 1.3
-  padding-left: 20px
-
-hr
-  border-top-color: rgba(#000, 0.2)
+@import modal_window
+@import full_screen
