additional bug fixes
Change-Id: I6c7da5ee1b5efd17f8289d9e9228ae8da71daaf9

--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -3,6 +3,7 @@
 - @is_reader = true
 
 - content_for :sidebar do
+  = render '/shared/widget_bookmarks'
   = render_cell :notes_list_widget, :display, notes: @notes, title: "Community Notes"
   = render '/shared/widget_ad_bible_app'
 
