--- a/app/views/bookmarks/index.html.haml
+++ b/app/views/bookmarks/index.html.haml
@@ -1,6 +1,49 @@
-- content_for :sidebar do
-  / = render_cell :likes_list_widget, :display, likes: @likes, title: "Likes", user_id: @user_id
-  = render '/shared/widget_ad_bible_app'
+- @title = 'Bookmarks'
+- @sidebar = false
+
+
+%article
+  %h1= t('bookmarks')
+  .split_pane
+    .split_pane_sidebar
+      %dl.labels_menu
+        %dt
+          = t('labels')
+        %dd
+          %b
+            %a{href: ":"}= t('all')
+        - @labels.each do |l|
+          - # TODO: Label link
+          %dd
+            %a{href: "#"}= "#{l.label} (#{l.total})" 
+    .split_pane_content
+      %ul.big_list
+        - @bookmarks.each do |b|
+          %li
+            .float_left
+              %p.gutter_bottom_half
+                %a{href: bible_path(b.reference)}
+                  - if b.title
+                    %b= b.title
+                    = " &mdash; #{b.reference.human}".html_safe
+                  - else
+                    %b= b.reference.human
+              - if b.labels
+                %p.small
+                  - b.labels.split(",").each do |l|
+                    - #TODO: split labels in model
+                    %a{href: "#"}= l
+                    - # TODO: Label link
+            .float_right
+              %p= b.created_as_date
+
+
+
+
+
+
+
+
 
 %article
   - if current_auth
