add'l bug fixes
Change-Id: I45499c2710c50c29c70ce42f8c2693ec35fc475b

--- a/app/assets/sass/_main_reader.sass
+++ b/app/assets/sass/_main_reader.sass
@@ -224,7 +224,7 @@
 .verse + .verse
   margin-left: 3px
 
-.verseno
+span.verse>strong
   +round
   +background-image(linear-gradient(#eee, #ddd))
   background-color: #eee
