--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -7,40 +7,43 @@
   = render_cell :notes_list_widget, :display, notes: @notes, title: "Community Notes"
   = render '/shared/widget_ad_bible_app'
 
-%header
-  %ul.float_left
-    %li.gutter_right_quarter
-      = @reference.ref_string
-    %li
-      %a#menu_book_chapter_trigger.dynamic_menu_trigger.drop_down_arrow{:href => '#menu_book_chapter', :title => 'Choose Book + Chapter'}
-        %span Choose Book + Chapter
-    %li.separator
-      %a#menu_version_trigger.dynamic_menu_trigger.drop_down_select{:href => '#menu_version', :title => 'Choose Version'}
-        %b= @reference.version_string
-        %span Choose Version
-  %ul.float_right
-    %li
-      %a#verses_selected_button.dynamic_menu_trigger.button.hide{:href => '#menu_bookmark', :title => 'Share'}
-        %b.icon_share
-          Selected
-          %sup#verses_selected_count
-            0
-    %li
-      %a.button{:href => '#', :title => 'Preferences'}
-        %span.icon_preferences
-          Preferences
-    %li
-      %a.button{:href => '#', :title => 'Listen'}
-        %span.icon_listen
-          Listen
-    %li
-      %a.button{:href => '#', :title => 'Parallel'}
-        %span.icon_parallel
-          Parallel
-    %li
-      %a.button{:href => '#', :title => 'Full Screen'}
-        %span.icon_full_screen
-          Full Screen
+#reader_header
+  %header
+    %ul.float_left
+      %li.gutter_right_quarter
+        = @reference.ref_string
+      %li
+        %a#menu_book_chapter_trigger.dynamic_menu_trigger.drop_down_arrow{:href => '#menu_book_chapter', :title => 'Choose Book + Chapter'}
+          %span Choose Book + Chapter
+      %li.separator
+        %a#menu_version_trigger.dynamic_menu_trigger.drop_down_select{:href => '#menu_version', :title => 'Choose Version'}
+          %b= @reference.version_string
+          %span Choose Version
+    %ul.float_right
+      %li
+        %a#verses_selected_button.dynamic_menu_trigger.button.hide{:href => '#menu_bookmark', :title => 'Share'}
+          %b.icon_share
+            Selected
+            %sup#verses_selected_count
+              0
+        %form{action: '', id: 'verses_selected_form', method: 'get'}
+          %input{id: 'verses_selected_input', name:'verses', type: 'hidden', value: ''}
+      %li
+        %a.button{:href => '#', :title => 'Preferences'}
+          %span.icon_preferences
+            Preferences
+      %li
+        %a.button{:href => '#', :title => 'Listen'}
+          %span.icon_listen
+            Listen
+      %li
+        %a.button{:href => '#', :title => 'Parallel'}
+          %span.icon_parallel
+            Parallel
+      %li
+        %a.button{:href => '#', :title => 'Full Screen'}
+          %span.icon_full_screen
+            Full Screen
 
 %article
   - @reference.contents.each do |r|
