--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -45,7 +45,8 @@
           %span.icon_full_screen
             Full Screen
 
-%article
+%article{"data-book" => @reference[:book].to_s, "data-chapter" => @reference[:chapter].to_s, "data-version" => @reference[:version].to_s}
+
   - @reference.contents.each do |r|
     = r.html_safe
 
