--- a/app/views/shared/_nav_primary.html.haml
+++ b/app/views/shared/_nav_primary.html.haml
@@ -7,7 +7,7 @@
       - if current_auth
         %li#nav_primary_bookmarks{class: @nav == :bookmarks ? "highlighted" : ""}
           %a{:href => user_bookmarks_path(current_auth.user_id)}
-            %span Lesezeichen
+            %span Book-<br>marks
       %li#nav_primary_plans
         %a{:href => '/reading-plans'}
           %span Plans
