Verse selection pow-pow.

--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -27,7 +27,7 @@
             %sup#verses_selected_count
               0
         %form{action: '', id: 'verses_selected_form', method: 'get'}
-          %input{id: 'verses_selected_input', name:'verses', type: 'hidden', value: ''}
+          %input.verses_selected_input{name:'verses', type: 'hidden', value: ''}
       %li
         %a.button{:href => '#', :title => 'Preferences'}
           %span.icon_preferences
