--- a/app/views/bookmarks/index.html.haml
+++ b/app/views/bookmarks/index.html.haml
@@ -9,20 +9,19 @@
       %dl.labels_menu
         %dt
           = t('labels')
-        %dd
+        %dd{class: params[:label] == nil ? "highlighted" : ""}
           %b
-            %a{href: ":"}= t('all')
+            %a{href: user_bookmarks_path(@user)}= t('all')
         - @labels.each do |l|
-          - # TODO: Label link
-          %dd
-            %a{href: "#"}= "#{l.label} (#{l.total})" 
+          %dd{class: params[:label] == l.label ? "highlighted" : ""}
+            = link_to "#{l.label} (#{l.total})", user_bookmarks_path(@user.id, label: l.label)
     .split_pane_content
       %ul.big_list
         - @bookmarks.each do |b|
           %li
             .float_left
               %p.gutter_bottom_half
-                %a{href: bible_path(b.reference)}
+                %a{href: bible_path("#{b.reference.osis}.#{b.version}")}
                   - if b.title
                     %b= b.title
                     = " &mdash; #{b.reference.human}".html_safe
@@ -36,8 +35,8 @@
                     - # TODO: Label link
             .float_right
               %p
-                = link_to('edit', edit_bookmark_path(bookmark.id)) 
-                = link_to('delete this bookmark', bookmark_path(bookmark.id), :confirm => 'Are you sure?', :method => :delete) 
+                = link_to('edit', edit_user_bookmark_path(current_auth.user_id, b.id)) 
+                = link_to('delete', bookmark_path(b.id), :confirm => 'Are you sure?', :method => :delete) 
                 = b.created_as_date
 
 
