Making the full-screen functionality work.

--- a/app/assets/sass/_main_reader.sass
+++ b/app/assets/sass/_main_reader.sass
@@ -224,7 +224,7 @@
 .verse + .verse
   margin-left: 3px
 
-span.verse>strong
+.verse > strong:first-child
   +round
   +background-image(linear-gradient(#eee, #ddd))
   background-color: #eee
