--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -41,7 +41,7 @@
           %span.icon_parallel
             Parallel
       %li
-        %a.button{:href => '#', :title => 'Full Screen'}
+        %a#button_full_screen.button{:href => '#', :title => 'Full Screen'}
           %span.icon_full_screen
             Full Screen
 
