--- a/app/assets/sass/_nav_primary.sass
+++ b/app/assets/sass/_nav_primary.sass
@@ -22,6 +22,7 @@
 
 #nav_primary .highlighted
   background: url(../images/nav_primary_highlighted.png) no-repeat left center
+  -webkit-background-size: 100% 100%
   margin-right: -5px
   padding-right: 5px
 
@@ -38,10 +39,11 @@
   text-align: center
   text-shadow: #000 0 1px 0
   padding-top: 40px
-  height: 18px
+  padding-bottom: 7px
 
 #nav_primary a
   background: url(../images/nav_primary_a.png) no-repeat -99999px -99999px
+  -webkit-background-size: 100% 100%
   color: #bbb
   display: block
   text-decoration: none
@@ -62,6 +64,10 @@
 #nav_primary_notes span
   background:
     image: url(../images/nav_notes.png)
+
+#nav_primary_bookmarks span
+  background:
+    image: url(../images/nav_bookmarks.png)
 
 #nav_primary_friends span
   background:
