--- a/app/views/bookmarks/index.html.haml
+++ b/app/views/bookmarks/index.html.haml
@@ -30,9 +30,9 @@
       - @bookmarks.each do |bookmark|
         %li{id: bookmark.id}
           %h5= link_to bookmark.title, bookmark_path(bookmark.id)
-          %p.mute.small.negative_gutter_top_half= link_to_references([Reference.new(bookmark.reference)])
+          %p.mute.small.negative_gutter_top_half= link_to_references([bookmark.reference])
           - if bookmark.labels
-            - bookmark.labels.split(',').each do |label|
+            - bookmark.labels.split(',').map(&:strip).each do |label|
               %span{style: 'background-color: yellow;'}= link_to(label, bookmarks_label_path(label: label, user_id: current_auth.user_id))
           %div{class: "date"}= bookmark.created_as_date.strftime("%m/%d/%Y")
           - if current_user && (current_auth.user_id.to_i == bookmark.user_id.to_i)
