--- a/app/cells/notes_list_widget/display.html.haml
+++ b/app/cells/notes_list_widget/display.html.haml
@@ -18,5 +18,5 @@
                 %img.avatar_small{src: note.user_avatar_url.px_24x24} 
             %td
               %a= link_to note.title, note_path(note.id)
-              %p= truncate_words(note.content_text, 60)
+              %p= truncate(note.content_text, length: 100, separator: " ")
                 
