--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -7,7 +7,7 @@
         - if current_auth
           %a#header_profile_trigger{:href => '#'}
             %span
-              %img{:src => '/images/andy_avatar.png'}
+              %img{:src => current_avatar}
               =current_auth.username
           %ol#header_profile_menu
             %li
