--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,7 +23,8 @@
             = render '/shared/sidebar'
       = render '/shared/footer'
     - if @reader_menus == true
-      = render '/shared/menu_book_chapter'
+      /= render '/shared/menu_book_chapter'
+      = render_cell :book_selector, :display, reference: @reference
       -# = render '/shared/menu_version'
       = render_cell :version_selector, :display, {reference: @reference}
       = render '/shared/menu_bookmark'
