--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -46,8 +46,8 @@
             =t("ref.full screen")
 
 %article{"data-book" => @reference[:book].to_s, "data-chapter" => @reference[:chapter].to_s, "data-version" => @reference[:version].to_s}
-  = link_to @reference.previous, bible_path(@reference.previous), class: "nav_prev"
-  = link_to @reference.next, bible_path(@reference.next), class: "nav_next"
+  = link_to(@reference.previous, bible_path(@reference.previous), class: "nav_prev") if @reference.previous
+  = link_to(@reference.next, bible_path(@reference.next), class: "nav_next") if @reference.next
   - @reference.contents.each do |r|
     = r.html_safe
 
