--- a/app/views/shared/_javascripts.html.haml
+++ b/app/views/shared/_javascripts.html.haml
@@ -2,7 +2,7 @@
 %script{:src => '/javascripts/application.js'}
 %script{:src => '/javascripts/rails.js'}
 %script{:src => '/javascripts/analytics.js'}
--# %script{:src => '/javascripts/uservoice.js'}
+%script{:src => '/javascripts/uservoice.js'}
 %script{:src => 'http://include.reinvigorate.net/re_.js'}
 
 - if content_for? :javascripts
