Added a white fade to the top of the main <article> area. Also, gitignore'ing "/.sass-cache" since that's rebuilt dynamically anyway (when running Sass or Compass).

--- a/app/assets/sass/_main_reader.sass
+++ b/app/assets/sass/_main_reader.sass
@@ -7,7 +7,6 @@
   width: 100%
 
 #main article
-  @extend .clearfix
   +round
   +box-shadow(#fff 0 1px 0 0)
   background:
@@ -15,7 +14,26 @@
     repeat: repeat-x
   border: 1px solid #cbc9cf
   padding: 30px 30px 15px
+  overflow: hidden
   position: relative
+
+#main article:after
+  +round_top
+  +box-shadow(#f2f1ef 0 -4px 0 0)
+  +background-image(linear-gradient(#fff, rgba(#fff, 0)))
+  border: 1px solid #cbc9cf
+    bottom: 0
+  content: ''
+  margin-left: -31px
+  width: 598px
+  height: 30px
+  position: fixed
+  top: 82px
+  z-index: 1
+  pointer-events: none
+
+.no_sidebar #main article:after
+  width: 908px
 
 #main.main_reader article
   padding: 40px 70px 45px
@@ -27,6 +45,9 @@
   +round_top_none
   background:
     image: url(../images/shadow.png)
+
+  &:after
+    content: none
 
 #main .top_section + header
   +round_top_none
@@ -224,7 +245,7 @@
 .verse + .verse
   margin-left: 3px
 
-.verse > strong:first-child
+.verseno
   +round
   +background-image(linear-gradient(#eee, #ddd))
   background-color: #eee
