Punting on the white fade for IE, because it's so janky. Page still works, just minus the eye-candy.

--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -11,6 +11,10 @@
 
 %link{:rel => 'stylesheet', :href => '/stylesheets/application.css'}
 
+<!--[if IE 9]>
+%link{:rel => 'stylesheet', :href => '/stylesheets/ie9.css'}
+<![endif]-->
+
 <!--[if IE 8]>
 %link{:rel => 'stylesheet', :href => '/stylesheets/ie8.css'}
 <![endif]-->
