notes and bookmarks working
Change-Id: I8acbf72f959b0f9b8d67ae362235989a6885e77c

--- a/app/views/bookmarks/index.html.haml
+++ b/app/views/bookmarks/index.html.haml
@@ -22,7 +22,7 @@
             .float_left
               %p.gutter_bottom_half
                 %b= b.title
-                - b.reference.each do |r|
+                - b.reference_list.each do |r|
                   %p
                     %b
                       %a{href: bible_path(r)}= r
