--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -28,7 +28,7 @@
       - @notes.each do |note|
         %li{id: note.id}
           %h5= link_to note.title, note_path(note.id)
-          %p.mute.small.negative_gutter_top_half= link_to_references(note.references) 
+          %p.mute.small.negative_gutter_top_half= link_to_references(note.reference_list) 
           %p= note.content
           %div{class: "status"}= note.user_status
   - else
