--- a/app/views/shared/_widget_bookmarks.html.haml
+++ b/app/views/shared/_widget_bookmarks.html.haml
@@ -7,7 +7,7 @@
       %li
         %b= b.title
         %br
-        - b.reference.each do |r|
+        - b.reference_list.each do |r|
           = link_to r, bible_path(r)
         - if b.labels
           %span.separator |
