--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -3,7 +3,7 @@
 - @is_reader = true
 
 - content_for :sidebar do
-  = render '/shared/widget_bookmarks'
+  = render '/shared/widget_bookmarks' unless @bookmarks.empty?
   = render_cell :notes_list_widget, :display, notes: @notes, title: t("notes.community notes")
   = render '/shared/widget_ad_bible_app'
 
