Changed page title to be of format <title> | YouVersion. Added reference to page title for reader#show

--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -1,4 +1,4 @@
-- @title = t("reader")
+- @title = "#{@reference.ref_string} #{@reference.version_string}"
 - @reader_menus = true
 - @is_reader = true
 
