--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -1,9 +1,10 @@
 %meta{:charset => 'utf-8'}
 %meta{'http-equiv' => 'x-ua-compatible', :content => 'ie=edge, chrome=1'}
 %title
-  =t("youversion")
-  |
   = @title
+  = "|" if @title
+  =t("youversion")
+  
 
 <!--[if lt IE 9]>
 %script{:src => '/javascripts/html5.js'}
