--- a/app/views/shared/_pagination.html.haml
+++ b/app/views/shared/_pagination.html.haml
@@ -1,21 +1,10 @@
-%ul.pagination
-  %li.pagination_first
-    %a{:href => '#'}=t("first page")
-  %li.pagination_previous
-    %a{:href => '#'}=t("previous page")
-  %li
-    %a{:href => '#'} 1
-  %li.highlighted
-    %a{:href => '#'} 2
-  %li
-    %a{:href => '#'} 3
-  %li
-    %a{:href => '#'} 4
-  %li
-    %a{:href => '#'} 5
-  %li
-    %a{:href => '#'} 6
-  %li.pagination_next
-    %a{:href => '#'}=t("next page")
-  %li.pagination_last
-    %a{:href => '#'}=t("last page")
+- if resource_list.has_pages
+  %ul.pagination
+    - unless @page.to_i == 1
+      %li.pagination_previous
+        =link_to t("previous page"), params.merge({page: @page-1})
+    %li= "#{((@page.to_i - 1)*resource_list.page_length) + 1}&ndash;#{@page.to_i * resource_list.page_length} of #{resource_list.total}".html_safe
+    - unless @page.to_i == resource_list.total_pages
+      %li.pagination_next
+        =link_to t("next page"), params.merge({page: @page+1})
+        
