added highlight color for title of bookmarks and notes
Change-Id: I203dff25944ad76735160664cbee413e7e6fb415

--- a/app/assets/sass/_main_reader.sass
+++ b/app/assets/sass/_main_reader.sass
@@ -328,10 +328,10 @@
   zoom: 1
 
 .callout_blue,
-.callout_green
+.callout_green,
+.highlight
   color: $body_text
   padding: 5px 10px
-  text-decoration: none
 
 .callout_blue:hover,
 .callout_green:hover
